@startuml
'https://plantuml.com/class-diagram

title US019 - As a team member I want to set the effort of a user story

package Infrastructure <<Rectangle>> #lightblue {
class TimeEffortRoute <<component>>{
}
}

package Interface_Adapters <<Rectangle>> #lightgreen {
class TimeEffortController {
+getUserStory()
}

class UserStoryStore {
-userStoryList : List<UserStory>
+findByID()
}

}


package Aplication_Service <<Rectangle>> #salmon {


package IRepositories <<Rectangle>> {
class UserStoryInterface {
+findByID()
}
}

package App_Service <<Rectangle>> {
class UserStoryService <<service>> {
+setTimeEffort()
}
}
}

package DTO <<Rectangle>> {
class UserStoryMapper <<component>> {
+data2Dto()
+model2Dto()
+dto2Json()
}
class UserStoryDTO <<component>> {
    - userStoryId :UserStoryId ;
    - timeEstimate :UsHour ;
}

class dataDto <<component>> {
-data : String
}

}

package Domain <<Rectangle>> #tan {
class UserStory {
- userStoryStatus : UserStoryStatus
- priority : int
- description : String
- id_UserStory : int
- parentUserStory : UserStory
}
}

TimeEffortRoute ..> TimeEffortController
TimeEffortController ..> UserStoryService
TimeEffortController ..> UserStoryMapper
UserStoryService ..> UserStory

@enduml